Update gradle deps, update to Java 17+ and add a small python function.